# Api-de-Tarefas

./: .gitignore  Dockerfile  README.md  Untitled-1.py  app.py  calculadora.py  calculadora2.py  classes.py  docker-compose.yml  pyproject.toml  sistemaestoque.py
