[project]
name = "projeto-python"
version = "0.1.0"
description = ""
authors = [
    {name = "gui"}
]
requires-python = ">=3.14"
dependencies = [
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "fastapi[all] (>=0.135.3,<0.136.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
